tests/neg/ycheck-termination-unapply.check
-- Warning: tests/neg/ycheck-termination-unapply.scala:14:4 ------------------------------------------------------------
14 |    n match { // warning
   |    ^
   |    n may not structurally decrease because Node unapply method is overridden or undefined.
-- Error: tests/neg/ycheck-termination-unapply.scala:16:20 -------------------------------------------------------------
16 |        v + caseLoop(next) // error
   |            ^^^^^^^^^^^^^^
   |            caseLoop may not terminate due to (mutually) recursive call.
